Fix z-index burger and menu

--- a/src/shared/interactive/burger/Burger.module.scss
+++ b/src/shared/interactive/burger/Burger.module.scss
@@ -7,7 +7,7 @@
       position: absolute;
       top: 20px;
       left: 20px;
-      z-index: 10000;
+      z-index: 10005;
 
       display: block;
       width: 54px;
