--- a/src/shared/shared_components/menu/components/menuMobile/MenuMobile.module.scss
+++ b/src/shared/shared_components/menu/components/menuMobile/MenuMobile.module.scss
@@ -4,7 +4,7 @@
    position: fixed;
    top: 0;
    left: 0;
-   z-index: 9999;
+   z-index: 10004;
 
    display: none;
    visibility: hidden;
